style form and search button

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="card col-3 bg-light ps-4">
            
             <label for="user-search" class="form-label fw-bold">Search for a City:</label>
-            <form>
+            <form class="search">
                 <input type="text" name="search" id="user-search">
                 <button type="submit"><i class="fa fa-search"></i></button>
             </form>
