add event listener for search form

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 <body>
   <header>Weather Dashboard For Curious Souls</header>
     
-  <div class="ms-1">
+  <div class="mx-1">
     <div class="row">
         <div class="card col-3 bg-light ps-4">
            
             <label for="user-search" class="fw-bold">Search for a City:</label>
             <form id="search">
                 <input type="text" id="user-search">
-                <button type="submit"><i class="fa fa-search"></i></button>
+                <button type="submit" id="start-search"><i class="fa fa-search"></i></button>
             </form>
 
             <ul id="city-buttons"></ul>
