--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
     </div>
     
     <div class="col-8 m-2">
-        <div class="card col-12 p-3">
-            <h3 class="fw-bold">"City Name"</h3>
+        <div class="card col-12 p-3" id="main-weather">
+            <h3 class="fw-bold" id="location-header">"City Name"</h3>
         </div>
 
-        <div class="mt-2 col-12">
+        <div class="mt-2 col-12" id="five-weather">
             "ding dong"
         </div>
     </div>
