set up queryURL for weather API, five-day forecast API, and UV index API

--- a/index.html
+++ b/index.html
@@ -32,7 +32,18 @@
     
     <div class="col-8 m-2">
         <div class="card col-12 p-3" id="main-weather">
-            <h3 class="fw-bold" id="location-header">"City Name"</h3>
+            <div class="row">
+                <h3 class="fw-bold float-left" id="location-header"></h3>
+                <!-- image goes here, and may need class float-left to bring it next to the #location-header text-->
+            </div>
+            <br/>
+            <p id="temperature-field"></p>
+            <br/>
+            <p id="humidity-field"></p>
+            <br/>
+            <p id="wind-field"></p>
+            <br/>
+            <p id="uv-field"></p>
         </div>
 
         <div class="mt-2 col-12" id="five-weather">
