--- a/index.html
+++ b/index.html
@@ -47,12 +47,14 @@
         </div>
 
         <div class="mt-2 col-12" id="five-weather">
-            "ding dong"
+            
         </div>
     </div>
   </div>
 
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.js" integrity="sha256-DrT5NfxfbHvMHux31Lkhxg42LY6of8TaYyK50jnxRnM=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" 
+  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" 
+  crossorigin="anonymous"></script>
   <script type="text/javascript" src="script.js"></script>
 
 </body>
