add weather icon to main weather display

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     
     <div class="col-8 m-2">
         <div class="card col-12 p-3" id="main-weather">
-            <div class="row">
-                <h3 class="fw-bold float-left" id="location-header"></h3>
-                <!-- image goes here, and may need class float-left to bring it next to the #location-header text-->
+            <div id="top-spot">
+                <h3 class="fw-bold" id="location-header"></h3>
+                <img id="main-icon"/>
             </div>
             <br/>
             <p id="temperature-field"></p>
