write UVI function with dynamic styling based on value thresholds

--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
             <br/>
             <p id="wind-field"></p>
             <br/>
-            <p id="uv-field"></p>
+            <div class="row">
+                <p class="col-1">UV Index:</p>
+                <p id="uv-field" class="col-1 text-center fw-bold"></p>
+            </div>
+            
         </div>
 
         <div class="mt-2 col-12" id="five-weather">
